# django-telegram-tasky

./: .gitignore  ASYNC_FIXES_COMPLETE.md  AUTH_REFACTOR_AND_FIXES.md  BUGFIXES_COMPLETE.md  BUILD_EXECUTABLE.md  CELERY_OPTIONAL.md  COMMANDS_REFERENCE.md  DEPLOYMENT.md  DJANGO_AUTH_SYSTEM.md  EXECUTABLE_GUIDE.md  FEATURES_COMPLETE.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MODULAR_ARCHITECTURE.md  Pipfile  QUICKSTART.md  README.md  SETUP_COMPLETE.md  TESTING_CHECKLIST.md  bot_run.py  build_executable.py  prompt.txt  pyi_rth_asyncio.py  pyproject.toml  requirements.txt  run.py  start_bot.py  tasky.spec
Tasky/: __init__.py  asgi.py  celery.py  settings.py  urls.py
core_approvals/: apps.py  bot_config.py
core_approvals/handlers/: __init__.py
core_auth/: admin.py  apps.py  models.py
core_auth/migrations/: 0001_initial.py  0002_initial.py  0003_remove_userprojectrole_role_remove_teamgroup_leader_and_more.py
core_bot/: bot.py  bot_config.py  registry.py  utils.py
core_bot/handlers/: __init__.py  approvals.py  basic.py  projects.py  reports.py  tasks.py
core_bot/management/: __init__.py
core_meetings/: apps.py  bot_config.py
core_meetings/handlers/: __init__.py  meetings.py
core_notifications/: apps.py  bot_config.py
core_notifications/handlers/: __init__.py  notifications.py
core_projects/: apps.py  bot_config.py
core_projects/handlers/: __init__.py
core_tasks/: admin.py  apps.py  bot_config.py  models.py  tasks.py
core_tasks/handlers/: __init__.py
core_tasks/migrations/: 0001_initial.py  (+1 more)
(+3 files in other folders)
